# Tier-Pythia

./: README.md  config.py  pyproject.toml  requirements.txt  run.py
cp_pythia/: __init__.py  ablation.py  config.py  generator.py  induction.py  metrics.py  model_io.py  perplexity.py  train.py
scripts/: pack_results.py  run_arm.py  run_calibration.py  run_full.sh  run_observational.py  run_sanity.py  run_smoke.sh  zip_results.sh
src/: ablation.py  data.py  eval.py  induction.py  interp.py  model_utils.py  plotting.py  sharpness.py  train.py
tests/: test_generator.py
